--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <title>PSD ro Webpage</title>
 
+    <!--GOogle Fonts-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@700;900&display=swap');
+    </style>
+
+
     <link href="style.css" rel="stylesheet">
 
 </head>
@@ -27,8 +34,8 @@
                         <li><a href="">Contact Us</a></li>
                         <li><a href="">Seller Help</a></li>
                         <div class="buttons">
-                            <input type="Button" value = "Login">
-                            <input type="Button" value = "Signup">
+                            <button class="login_btn">Login</button>
+                            <button class="signup_btn">Signup</button>
                         </div>
 
                     </ul>
