--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <header>
-        <section class="top-header-area">
-            <div class="inner-header content">
+        <section class="top-header-area" >
+            <div class="inner-header content" id="header">
                 <div class="logo">
                     <ul>
                         <li><img class = "resize" src="img/logo.png" alt="logo" width="20%" height="20%"></li>
@@ -40,18 +40,72 @@
 
                     </ul>
                 </div>
-                <!--     
-                <div class="buttons">
-                    <form action="">
-                        <input type="Button" value = "Login">
-                        <input type="Button" value = "Signup">
-                    </form>
-        
-                </div>
-                -->
             </div>
 
         </section>
     </header>
+
+    <section class="banner-area">
+        <div class="body-text">
+            <div class="bold-body-white-text">
+                <h1>Amazon Owes<br>You Money.<br>We'll Help You<br>Get It Back.</h1>
+            </div>
+            <div class="small-body-white-text">
+                <h4>Sign up now for your free no-obligation audit<br>
+                    and find out  how much you could be owed by<br>
+                    Amazon
+                </h4>
+            </div>
+        </div>
+        <div class="bgimage">
+            <img class="bgimage" src="img/homepage.png" alt="homepage" width="90%" height="90%">
+        </div>
+    </section>
+
+    <!--Discover Area-->
+
+    <section class="discover-area">
+        <div class="body-text">
+            <div class="bold-body-green-text">
+                <h1>Discover Today<br>how much<br>Amazon owes<br>you.</h1>
+            </div>
+        </div>
+        <div class="bgimage">
+            <img class="bgimage" src="img/page2.png" alt="homepage" width="100%" height="100%">
+        </div>
+    </section>
+
+    <!--Page 3 Area-->
+
+    <section class="area3">
+        <div class="body-text">
+
+        </div>
+        <div class="bgimage">
+            <img class="bgimage" src="img/page3.png" alt="homepage" width="100%" height="100%">
+        </div>
+    </section>
+
+    <!--Page 4 Area-->
+
+    <section class="area4">
+        <div class="body-text">
+
+        </div>
+        <div class="bgimage">
+            <img class="bgimage" src="img/page4.png" alt="homepage" width="100%" height="100%">
+        </div>
+    </section>
+
+    <footer>
+        <section class="footer">
+            <div class="body-text">
+    
+            </div>
+        </section>
+    </footer>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
