Working on third area of website

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         
             <div class="bold-body-green-text second-header">
                 <h1>Discover Today<br>how much<br>Amazon owes<br>you.</h1>
+                <!--Don't forget to add a button here-->
             </div>
             <div class="bold-body-white-text second-text">
                 <h1>Why choose us?<br></h1>
@@ -86,6 +87,7 @@
                     nostrud et mollit dolore magna veniam voluptate enim occaecat.</p>
                 <h4 class="h4-text-name">Hi, I'm Placeholder</h4>
                 <p class="p-text-name">Placeholder Position</p>
+                <!--Don't forget to add a button here-->
             </div>
         
         <div class="bgimage">
@@ -95,9 +97,14 @@
 
     <!--Page 3 Area-->
 
-    <section class="area3">
-        <div class="body-text">
-
+    <section class="third-area">
+        <div class="bold-body-green-text third-header">
+            <h1>Our Tools<h1>
+            <!--Don't forget to add 4 buttons here-->
+        </div>
+        <div class="bold-body-green-text clients-header">
+            <h1>What our clients say<h1>
+            <!--Don't forget to add 4 buttons here-->
         </div>
         <div class="bgimage">
             <img class="bgimage" src="img/page3.png" alt="homepage" width="100%" height="100%">
