--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <footer>
         <section class="footer">
             <div class="body-text">
-    
+                <img class="footer-logo" src="img/logo.png" alt="logo">
             </div>
         </section>
     </footer>
