--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
         <section class="footer">
             <div class="body-text">
                 <img class="footer-logo" src="img/logo.png" alt="logo">
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="">How it works</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Seller Help</a></li>
+
+                    </ul>
+                </div>
             </div>
         </section>
     </footer>
