working on area4 forms

--- a/index.html
+++ b/index.html
@@ -114,8 +114,18 @@
     <!--Page 4 Area-->
 
     <section class="area4">
-        <div class="body-text">
-
+        <div class="bold-body-green-text">
+            <h2>Register</h2>
+            <form class="register"action="/action_page.php">
+                <input type="text" id="name" name="name" value="  Full Name"><br>
+                <input type="text" id="email" name="email" value="  Email"><br>
+                <input type="text" id="pnum" name="pnum" value="  Phone Number"><br>
+                <input type="text" id="pword" name="pword" value="  Password"><br>
+                <input type="text" id="cpword" name="cpword" value="  Confirm Password"><br>
+                <input type="text" id="loc" name="loc" value="  Location"><br><br>
+                <input type="submit" value="Submit">
+              </form> 
+              
         </div>
         <div class="bgimage">
             <img class="bgimage" src="img/page4.png" alt="homepage" width="100%" height="100%">
@@ -126,7 +136,17 @@
         <section class="footer">
             <div class="body-text">
                 <img class="footer-logo" src="img/logo.png" alt="logo">
-                <div class="footer-links">
+                <div class="footer-links1">
+                    <ul>
+                        <li><a href="">How it works</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Seller Help</a></li>
+
+                    </ul>
+                </div>
+                <div class="footer-links2">
                     <ul>
                         <li><a href="">How it works</a></li>
                         <li><a href="">FAQ</a></li>
