favicons and area4

--- a/index.html
+++ b/index.html
@@ -117,16 +117,22 @@
         <div class="bold-body-green-text">
             <h2>Register</h2>
             <form class="register"action="/action_page.php">
-                <input type="text" id="name" name="name" value="  Full Name"><br>
-                <input type="text" id="email" name="email" value="  Email"><br>
-                <input type="text" id="pnum" name="pnum" value="  Phone Number"><br>
-                <input type="text" id="pword" name="pword" value="  Password"><br>
-                <input type="text" id="cpword" name="cpword" value="  Confirm Password"><br>
-                <input type="text" id="loc" name="loc" value="  Location"><br><br>
-                <input type="submit" value="Submit">
+                <input type="text" id="name" name="name" onfocus="this.value=''" value="  Full Name"><br>
+                <input type="text" id="email" name="email" onfocus="this.value=''" value="  Email"><br>
+                <input type="text" id="pnum" name="pnum" onfocus="this.value=''" value="  Phone Number"><br>
+                <input type="text" id="pword" name="pword" onfocus="this.value=''" value="  Password"><br>
+                <input type="text" id="cpword" name="cpword" onfocus="this.value=''" value="  Confirm Password"><br>
+                <input type="text" id="loc" name="loc" onfocus="this.value=''" value="  Location"><br><br>
+                <input type="submit" value="SUBMIT">
               </form> 
               
         </div>
+        <div class="polaroid">
+            <img src="rock600x400.jpg" alt="Norway" style="width:100%">
+            <div class="container">
+              <p>Hardanger, Norway</p>
+            </div>
+          </div>
         <div class="bgimage">
             <img class="bgimage" src="img/page4.png" alt="homepage" width="100%" height="100%">
         </div>
