--- a/index.html
+++ b/index.html
@@ -127,12 +127,40 @@
               </form> 
               
         </div>
-        <div class="polaroid">
-            <img src="rock600x400.jpg" alt="Norway" style="width:100%">
-            <div class="container">
-              <p>Hardanger, Norway</p>
-            </div>
-          </div>
+        <h1 class="bold-body-green-text seller">Latest Seller Help</h1>
+        <div class="polaroids">
+            <ul>
+                <li>
+                    <div class="polaroid1">
+                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <div class="container">
+                          <p>Placeholder1</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="polaroid2">
+                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <div class="container">
+                          <p>Placeholder2</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="polaroid3">
+                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <div class="container">
+                          <p>Placeholder3</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="polaroid4">
+                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <div class="container">
+                          <p>Placeholder4</p>
+                    </div>
+                </li>
+            </ul>
+    
+        </div>
         <div class="bgimage">
             <img class="bgimage" src="img/page4.png" alt="homepage" width="100%" height="100%">
         </div>
