--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
               </form> 
               
         </div>
-        <h1 class="bold-body-green-text seller">Latest Seller Help</h1>
+        <h1 class="bold-body-green-text seller">Latest Seller Help<hr></h1>
+        <form class="help-button"action="/index.html">
+            <input type="submit" value="placeholder">
+          </form> 
+        <br>
         <div class="polaroids">
             <ul>
                 <li>
