--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png">
-    <title>PSD ro Webpage</title>
+    <title>PSD to Webpage</title>
 
     <!--GOogle Fonts-->
     <style>
@@ -15,11 +15,28 @@
 
 
     <link href="style.css" rel="stylesheet">
+    <script src="/main.js"></script>
 
 </head>
 <body>
     <header>
         <section class="top-header-area" >
+
+            <div class="navbar">
+                <a href="#home">Home</a>
+                <a href="#news">News</a>
+                <div class="dropdown">
+                  <button class="dropbtn">Dropdown 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                </div> 
+              </div>
+
             <div class="inner-header content" id="header">
                 <div class="logo">
                     <ul>
