--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,29 @@
     </style>
 
 
-    <link href="style.css" rel="stylesheet">
+    <link href="style2.css" rel="stylesheet">
     <script src="/main.js"></script>
 
 </head>
 <body>
     <header>
         <section class="top-header-area" >
+
+            <div class="navbar">
+                <a href="#home">Home</a>
+                <a href="#news">News</a>
+                <div class="dropdown">
+                  <button class="dropbtn">Dropdown 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                </div> 
+              </div>
+
             <div class="inner-header content" id="header">
                 <div class="logo">
                     <ul>
