--- a/index2.html
+++ b/index2.html
@@ -23,17 +23,25 @@
         <section class="top-header-area" >
 
             <div class="navbar">
-                <a href="#home">Home</a>
-                <a href="#news">News</a>
+            
+                <a href="#home"><img class = "resize" src="img/logo.png" alt="logo" width="20%" height="20%"></a>
+                
                 <div class="dropdown">
                   <button class="dropbtn">Dropdown 
                     <i class="fa fa-caret-down"></i>
                   </button>
                   <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">How it works</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">Testimonials</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Seller Help</a>
+                    <a href="#">Testimonials</a>
                   </div>
+                  <div class="buttons">
+                    <button class="login_btn">Login</button>
+                    <button class="signup_btn">Signup</button>
+                </div>
                 </div> 
               </div>
 
