--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
                 <a href="#home"></a>
                 
                 <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn"><img src="/img/menu.png" alt="menu"></button>
+                    <button onclick="myFunction()" class="dropbtn">Menu</button>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#">How it works</a>
                         <a href="#">FAQ</a>
