--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
             </div>
             
         <div class="bgimage">
-            <img class="bgimage" src="img/homepage.png" alt="homepage" width="90%" height="90%">
+            <img class="bgimage" src="img/homepage.png" alt="homepage">
         </div>
     </section>
 
