--- a/index.html
+++ b/index.html
@@ -259,21 +259,19 @@
                 <img class="footer-logo" src="img/logo.png" alt="logo">
                 <div class="footer-links1">
                     <ul>
-                        <li><a href="">How it works</a></li>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">Testimonials</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Seller Help</a></li>
+                        <li><a href="">placeholder1</a></li>
+                        <li><a href="">placeholder2</a></li>
+                        <li><a href="">palceholder3</a></li>
+                        <li><a href="">placeholder4</a></li>
+                        <li><a href="">placeholder5</a></li>
 
                     </ul>
                 </div>
                 <div class="footer-links2">
                     <ul>
-                        <li><a href="">How it works</a></li>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">Testimonials</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Seller Help</a></li>
+                        <li><a href="">placeholder1</a></li>
+                        <li><a href="">placeholder2</a></li>
+                        <li><a href="">placeholder3</a></li>
 
                     </ul>
                 </div>
