--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <ul>
                 <li>
                     <div class="tools1">
-                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <img src="img/placeholder.jpg" alt="Placeholder" style="width:100%">
                     </div>
                 </li>
                 <li>
