--- a/index.html
+++ b/index.html
@@ -138,22 +138,22 @@
             <ul>
                 <li>
                     <div class="tools1">
-                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <img src="img/placeholder.jpg" alt="placeholder" style="width:100%">
                     </div>
                 </li>
                 <li>
                     <div class="tools2">
-                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <img src="img/placeholder.jpg" alt="placeholder" style="width:100%">
                     </div>
                 </li>
                 <li>
                     <div class="tools3">
-                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <img src="img/placeholder.jpg" alt="placeholder" style="width:100%">
                     </div>
                 </li>
                 <li>
                     <div class="tools4">
-                        <img src="img/placeholder.jpg" alt="Norway" style="width:100%">
+                        <img src="img/placeholder.jpg" alt="placeholder" style="width:100%">
                     </div>
                 </li>
             </ul>
