--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 
 
     <link href="style2.css" rel="stylesheet">
-    <script src="/main.js"></script>
+    <script src="/index.js"></script>
 
 </head>
 <body>
