--- a/index2.html
+++ b/index2.html
@@ -155,9 +155,11 @@
             <button class="button2">placeholder</button>
 
 
-        <div class="bgimage2">
-            <img class="bgimage2" src="img/page2.png" alt="homepage" width="100%" height="100%">
+        <div class="bgimage2">          
+            <img class="bgimage" src="img/mob2.png" alt="homepage">
+            <img class="bgimage" src="img/mob2_2.png" alt="homepage">
         </div>
+        
     </section>
 
     <!--Page 3 Area-->
