social media icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </style>
 
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet">
     <script src="/index.js"></script>
 
@@ -275,6 +276,18 @@
 
                     </ul>
                 </div>
+
+                <div class="icons">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-google"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-snapchat-ghost"></a>
+                    <a href="#" class="fa fa-reddit"></a>
+                </div>
+
+                
             </div>
         </section>
     </footer>
