--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@700;900&display=swap');
     </style>
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style2.css" rel="stylesheet">
     <script src="/index.js"></script>
 
