--- a/index2.html
+++ b/index2.html
@@ -107,6 +107,7 @@
             <div class="bold-body-green-text second-header" >
                 <h1>Discover Today<br>how much<br>Amazon owes<br>you.</h1>
             </div>
+            <!--
             <div class="discover">
                 <ul>
                     <li>
@@ -130,6 +131,7 @@
                 </ul>
         
             </div>
+        -->
             <button class="button1">placeholder1</button>
 
             <div class="bold-body-white-text second-text">
@@ -147,7 +149,8 @@
                     cupidatat qui sunt qui minim minim irure. Esse proident<br>
                     mollit non ex in. Laboris adipisicing sint laborum cillum <br>
                     nostrud et mollit dolore magna veniam voluptate enim occaecat.</p>
-                <h4 class="h4-text-name">Hi, I'm Placeholder</h4>
+
+                <h4 class="h4-text-name">Hi, <br> I'm Placeholder</h4>
                 <p class="p-text-name">Placeholder Position</p>
                 <!--Don't forget to add a button here-->
             </div>
