discover section on mobile site is finished

--- a/index2.html
+++ b/index2.html
@@ -138,9 +138,10 @@
                 <h1>Why choose us?<br></h1>
                 <h4 class="h4-text">Header1</h4>
                 <p class="p-text">Qui voluptate dolore Lorem do consectetur fugiat nostrud <br>
-                    cupidatat qui sunt qui minim minim irure. Esse proident mollit non ex in. <br>
-                    Laboris adipisicing sint laborum cillum nostrud et mollit dolore magna <br>
-                    veniam voluptate enim occaecat.</p>
+                    cupidatat qui sunt qui minim minim irure. Esse proident <br> 
+                    mollit non ex in. Laboris adipisicing sint laborum cillum <br>
+                    nostrud et mollit dolore magna 
+                    veniam voluptate enim.</p>
                 <h4 class="h4-text">Header1</h4>
                 <p class="p-text">Qui voluptate dolore Lorem do consectetur fugiat nostrud <br>
                     cupidatat qui sunt qui minim minim irure.</p>
@@ -148,14 +149,12 @@
                 <p class="p-text">Qui voluptate dolore Lorem do consectetur fugiat nostrud <br>
                     cupidatat qui sunt qui minim minim irure. Esse proident<br>
                     mollit non ex in. Laboris adipisicing sint laborum cillum <br>
-                    nostrud et mollit dolore magna veniam voluptate enim occaecat.</p>
+                    nostrud et mollit dolore magna veniam voluptate enim.</p>
 
                 <h4 class="h4-text-name">Hi, <br> I'm Placeholder</h4>
                 <p class="p-text-name">Placeholder Position</p>
                 <!--Don't forget to add a button here-->
             </div>
-
-            <button class="button2">placeholder</button>
 
 
         <div class="bgimage2">          
