--- a/index2.html
+++ b/index2.html
@@ -215,6 +215,7 @@
                         <h1>ratings1</h1>
                     </div>
                 </li>
+                <!--
                 <li>
                     <div class="ratings2">
                         <h1>ratings2</h1>
@@ -225,11 +226,12 @@
                         <h1>ratings3</h1>
                     </div>
                 </li>
-
+            -->
             </ul>
     
         </div>
         <div class="bgimage">
+            <img class="bgimage" src="img/mob2.png" alt="homepage" width="100%" height="100%">
             <img class="bgimage" src="img/mob2.png" alt="homepage" width="100%" height="100%">
             <img class="bgimage" src="img/mob2.png" alt="homepage" width="100%" height="100%">
         </div>
