--- a/index2.html
+++ b/index2.html
@@ -325,6 +325,16 @@
 
                     </ul>
                 </div>
+
+                <div class="icons">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-google"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-snapchat-ghost"></a>
+                    <a href="#" class="fa fa-reddit"></a>
+                </div>
             </div>
         </section>
     </footer>
