moble site done

--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
 
 
         <div class="bgimage2">          
-            <img class="bgimage" src="img/mob2.png" alt="homepage">
+            <img class="bgimage" src="img/mob2.png" alt="homepage" width="100%" height="100%">
             <img class="bgimage" src="img/mob2_2.png" alt="homepage">
         </div>
         
@@ -305,6 +305,7 @@
         <section class="footer">
             <div class="body-text">
                 <img class="footer-logo" src="img/logo.png" alt="logo">
+                <!--
                 <div class="footer-links1">
                     <ul>
                         <li><a href="">How it works</a></li>
@@ -315,6 +316,7 @@
 
                     </ul>
                 </div>
+                -->
                 <div class="footer-links2">
                     <ul>
                         <li><a href="">How it works</a></li>
